@@ -1,49 +1,36 @@
 # Copyright 1999-2022 Gentoo Authors
 # Distributed under the terms of the GNU General Public License v2
 
-EAPI=7
-inherit golang-build golang-vcs-snapshot systemd
-
-EGO_PN="github.com/Lusitaniae/apache_exporter"
-EGIT_COMMIT="v${PV/_rc/-rc.}"
-APACHE_EXPORTER_COMMIT="f4fd9dd"
-ARCHIVE_URI="https://${EGO_PN}/archive/${EGIT_COMMIT}.tar.gz -> ${P}.tar.gz"
-KEYWORDS="~amd64"
+EAPI=8
+inherit go-module systemd
 
 DESCRIPTION="Prometheus exporter for apache metrics"
 HOMEPAGE="https://github.com/Lusitaniae/apache_exporter"
-SRC_URI="${ARCHIVE_URI}"
+SRC_URI="https://github.com/Lusitaniae/apache_exporter/archive/v${PV}.tar.gz -> ${P}.tar.gz"
+SRC_URI+=" https://manuel.friedli.info/gentoo-overlay/apache_exporter-0.11.0-deps.tar.xz"
+
 LICENSE="MIT"
 SLOT="0"
-IUSE=""
+KEYWORDS="~amd64"
 
-DEPEND=">=dev-lang/go-1.14
-	>=dev-util/promu-0.3.0"
-
-RDEPEND="acct-user/apache_exporter"
-
-src_prepare() {
-	default
-	sed -i -e "s/{{.Revision}}/${APACHE_EXPORTER_COMMIT}/" src/${EGO_PN}/.promu.yml || die
-}
+DEPEND="acct-group/apache_exporter
+	acct-user/apache_exporter"
+	RDEPEND="${DEPEND}"
 
 src_compile() {
-	pushd src/${EGO_PN} || die
-	mkdir -p bin || die
-	GOPATH="${S}" GOCACHE="${T}"/go-cache promu build -v --prefix apache_exporter || die
-	popd || die
+	ego build
 }
 
 src_install() {
-	pushd src/${EGO_PN} || die
-	dobin apache_exporter/apache_exporter
+	dobin apache_exporter
 	dodoc README.md
-	systemd_dounit "${FILESDIR}/${PN}.service"
+	newinitd "${FILESDIR}"/apache_exporter.initd apache_exporter
+	newconfd "${FILESDIR}"/apache_exporter.confd apache_exporter
+
+	systemd_dounit "${FILESDIR}"/apache_exporter.service
 	insinto /etc/sysconfig
 	newins "${FILESDIR}/sysconfig.apache_exporter" apache_exporter
-	popd || die
+
 	keepdir /var/log/apache_exporter
-	fowners apache_exporter:apache_exporter /var/log/apache_exporter
-	newinitd "${FILESDIR}"/${PN}.initd ${PN}
-	newconfd "${FILESDIR}"/${PN}.confd ${PN}
+	fowners -R ${PN}:${PN} /var/log/apache_exporter
 }
