@@ -1,3 +1,6 @@
+  30 Apr 2022; Manuel Friedli <manuel@gentoo.org> apache_exporter-0.11.0.ebuild:
+  app-metrics/apache_exporter: Fix build.
+
 *apache_exporter-0.11.0 (30 Apr 2022)
 
   30 Apr 2022; Manuel Friedli <manuel@gentoo.org>
